# rq-configs

./: .aerospace.toml  .biqueryrc  .gitconfig  .gitignore  .tmux.conf  .visidatarc  .zsh_plugins.txt  .zshrc  config  docker_template  dockerignore_template  extensions.json  gitignore_template  keybindings.json  mkdocs_template  pyinit.sh  pyproject.toml  sesh.toml  settings.json  sketchybar_loop.sh  starship.toml  startship.toml  tinit.sh  vd.py
sketchybar/: colors.lua  default.lua  init.lua  settings.lua  sketchybarrc
sketchybar/helpers/: app_icons.lua
sketchybar/items/: aerospace.lua  apple.lua  calendar.lua  front_app.lua  init.lua  menu-space-switch.lua  spaces.lua
sketchybar/items/widgets/: battery.lua  init.lua  volume.lua  weather.lua  weather_vars.lua
tmuxifier/layouts/: BigQueryETL.session.sh  Conciliacion Paypal.session.sh  CuotaFinderTeresa.session.sh  DataLakePipeline.session.sh  OAR2PDF.session.sh  SantanderSurveyCleaner.session.sh  comisiones_nuevas-main.session.sh  config-repo.session.sh  config.session.sh  data_profiler.session.sh  db.session.sh  eeAPITest.session.sh  excel_datalink.session.sh  ga.session.sh  nerdBot.session.sh  nvim.session.sh  nvim.window.sh  nvim_venv.window.sh  requirementsBuilder.session.sh  santander-metrics.session.sh  santanderCOCS.session.sh  services.window.sh  shell.window.sh  ssh.session.sh  ssh.window.sh
yazi/: package.toml  yazi.toml
